--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,7 +5,9 @@
     "com.unity.ide.rider": "3.0.16",
     "com.unity.ide.visualstudio": "2.0.16",
     "com.unity.ide.vscode": "1.2.5",
+    "com.unity.performance.profile-analyzer": "1.1.1",
     "com.unity.probuilder": "5.0.7",
+    "com.unity.profiling.core": "1.0.2",
     "com.unity.render-pipelines.universal": "14.0.4",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
