--- a/Assets/Scripts/CrowdSimulation_MainThread_OOP/CrowdSimulation_MT_OOP.asmdef
+++ b/Assets/Scripts/CrowdSimulation_MainThread_OOP/CrowdSimulation_MT_OOP.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "CrowdSimulation_Base",
+    "name": "CrowdSimulation_MT_OOP",
     "rootNamespace": "",
     "references": [
         "GUID:2361f2476a873e34ba6fb622d84e8123"
