--- a/Assets/Scripts/CrowdSimulation_MainThread_OOP_Octree/Octree.asmdef
+++ b/Assets/Scripts/CrowdSimulation_MainThread_OOP_Octree/Octree.asmdef
@@ -1,3 +1,16 @@
 {
-	"name": "Octree"
+    "name": "Octree",
+    "rootNamespace": "",
+    "references": [
+        "GUID:2361f2476a873e34ba6fb622d84e8123"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
