--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -8,6 +8,7 @@
     "com.unity.ide.visualstudio": "2.0.18",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.performance.profile-analyzer": "1.2.2",
+    "com.unity.physics": "1.0.10",
     "com.unity.probuilder": "5.0.7",
     "com.unity.profiling.core": "1.0.2",
     "com.unity.render-pipelines.universal": "14.0.7",
